# cpp-ipc

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/ipc/: connection_manager.cpp  connection_manager.hpp  messages.hpp
src/log/: logger.cpp
src/main/: main.cpp
